--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ ENDIF(CMAKE_BUILD_TYPE MATCHES "Release")
 set(CMAKE_MODULE_PATH
         ${CMAKE_MODULE_PATH}
         ${CMAKE_SOURCE_DIR}/../cmake_modules
+        ${CMAKE_SOURCE_DIR}/cmake_modules
 )
 
 find_package(gtkmm)
